--- a/beelMe2Landing/package.json
+++ b/beelMe2Landing/package.json
@@ -2,7 +2,7 @@
   "name": "beelme2landing",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://AlanDJS9.github.io/beelmeLandingTest",
+  "homepage": "https://AlanDJS9.github.io/ReactLandingPageBeelme",
   "type": "module",
   "scripts": {
     "deploy": "npm run build && gh-pages -d dist",
@@ -24,7 +24,7 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.12",
-    "gh-pages": "^6.2.0",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.4.17",
     "vite": "^3.1.0"
